feat: update angular to 18

--- a/.storybook/stories/auto-docs.mdx
+++ b/.storybook/stories/auto-docs.mdx
@@ -1,4 +1,4 @@
-import { Meta, Title, Primary, Controls } from '@storybook/blocks';
+import { Meta, Title, Primary, Controls } from '@storybook/addon-docs/blocks';
 
 <Meta isTemplate />
 
