fix: public api update

--- a/projects/addons/a11y/a11y.api.md
+++ b/projects/addons/a11y/a11y.api.md
@@ -8,13 +8,12 @@ import { AfterContentInit } from '@angular/core';
 import { AfterViewInit } from '@angular/core';
 import { BehaviorSubject } from 'rxjs';
 import { ChangeDetectorRef } from '@angular/core';
-import { ComponentFactoryResolver } from '@angular/core';
 import { ElementRef } from '@angular/core';
 import { EventEmitter } from '@angular/core';
-import { FormGroup } from '@angular/forms';
 import { FormGroupName } from '@angular/forms';
 import * as i0 from '@angular/core';
-import * as i3_2 from '@angular/common';
+import * as i3 from '@angular/common';
+import * as i4 from '@angular/forms';
 import { InjectionToken } from '@angular/core';
 import { NgModelGroup } from '@angular/forms';
 import { Observable } from 'rxjs';
@@ -43,14 +42,10 @@ class AppfxA11yModule {
     static ɵfac: i0.ɵɵFactoryDeclaration<AppfxA11yModule, never>;
     // (undocumented)
     static ɵinj: i0.ɵɵInjectorDeclaration<AppfxA11yModule>;
-    // Warning: (ae-forgotten-export) The symbol "i1" needs to be exported by the entry point index.d.ts
-    // Warning: (ae-forgotten-export) The symbol "i2" needs to be exported by the entry point index.d.ts
-    // Warning: (ae-forgotten-export) The symbol "i3" needs to be exported by the entry point index.d.ts
-    // Warning: (ae-forgotten-export) The symbol "i4" needs to be exported by the entry point index.d.ts
     // Warning: (ae-forgotten-export) The symbol "i5" needs to be exported by the entry point index.d.ts
     //
     // (undocumented)
-    static ɵmod: i0.ɵɵNgModuleDeclaration<AppfxA11yModule, [typeof i1.OverflowClrTabsDirective, typeof i2.OverrideClrStringsDirective, typeof i3.RequiredFieldLegendComponent, typeof i4.ZoomLevelIndicatorDirective], [typeof i5.AppfxTranslateModule], [typeof i1.OverflowClrTabsDirective, typeof i2.OverrideClrStringsDirective, typeof i3.RequiredFieldLegendComponent, typeof i4.ZoomLevelIndicatorDirective]>;
+    static ɵmod: i0.ɵɵNgModuleDeclaration<AppfxA11yModule, [typeof OverflowClrTabsDirective, typeof OverrideClrStringsDirective, typeof RequiredFieldLegendComponent, typeof ZoomLevelIndicatorDirective], [typeof i5.AppfxTranslateModule], [typeof OverflowClrTabsDirective, typeof OverrideClrStringsDirective, typeof RequiredFieldLegendComponent, typeof ZoomLevelIndicatorDirective]>;
 }
 export { AppfxA11yModule as A11yModule }
 export { AppfxA11yModule }
@@ -91,7 +86,7 @@ export class OverrideClrStringsDirective implements OnInit {
     // (undocumented)
     ngOnInit(): void;
     // (undocumented)
-    static ɵdir: i0.ɵɵDirectiveDeclaration<OverrideClrStringsDirective, "clr-stepper-panel [appfxOverrideClrStrings]", never, { "appfxOverrideClrStrings": "appfxOverrideClrStrings"; }, {}, never, never, false, never>;
+    static ɵdir: i0.ɵɵDirectiveDeclaration<OverrideClrStringsDirective, "clr-stepper-panel [appfxOverrideClrStrings]", never, { "appfxOverrideClrStrings": { "alias": "appfxOverrideClrStrings"; "required": false; }; }, {}, never, never, false, never>;
     // (undocumented)
     static ɵfac: i0.ɵɵFactoryDeclaration<OverrideClrStringsDirective, never>;
 }
